--- a/html/watcha.html
+++ b/html/watcha.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <title>Watcha</title>
+    <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
