--- a/html/watcha.html
+++ b/html/watcha.html
@@ -52,7 +52,7 @@
         <div class="banner__contents">
             <h1 class="banner__title">Watcha</h1>
             <div class="banner__description">
-                왓챠 모든 영화, 드라마, 다큐멘터리, 애니메이션을 언제 어디서나 최고의 화질로 무제한 감상하세요.
+                Watch all Watcha movies, dramas, documentaries, and animations with the highest quality anytime, anywhere.
             </div>
         </div>
         <div class="banner--fadeBottom"></div>
@@ -555,7 +555,7 @@
             <img src="images/watcha/movie__beforesunrise.jpeg" alt="">
         </div>
         <div class="popcontent">
-            <div class="popimgtitle">Begin Again</div>
+            <div class="popimgtitle">Before Sunrise</div>
          <div class="popgenre">Genre: Drama, Romance</div>
          <div class="popperiod">Show time: 1H 41M </div>
           <div class="popepisode">Opening date: 1995</div>
